# Calculator-Cmake

./: CMakeLists.txt  README.md  qml.cpp  qml.h  style.qss
